# samengine

./: .gitattributes  .gitignore  .npmignore  CHANGELOG.md  README.md  clean.js  index.html  justfile  package-lock.json  package.json  project.ts  tsconfig.json  webgameengine-1.0.0.tgz
.samengine/: samfile
crates/fluaterm/: Cargo.toml
crates/fluaterm/src/: functions.rs  lib.rs
crates/sakeparser/src/: lib.rs
crates/samfileparser/: Cargo.toml  README.md
crates/samtool/: Cargo.toml  README.md
crates/samtool/npm/@shadowdara/samtool/: package.json
crates/samtool/npm/@shadowdara/samtool-darwin-x64/: package.json
crates/samtool/npm/@shadowdara/samtool-linux-arm64/: samtool
crates/samtool/npm/@shadowdara/samtool-linux-arm64-musl/: samtool
crates/samtool/npm/@shadowdara/samtool-linux-x64/: samtool
crates/samtool/npm/@shadowdara/samtool-linux-x64-musl/: samtool
crates/samtool/src/: main.rs  tags.rs
crates/vm/: test.py
crates/vm/src/: main.rs
desktop/: package-lock.json  package.json
desktop-tauri/src-tauri/: Cargo.toml
desktop/electron/: forge.config.js  package.json
desktop/electron/src/: index.html  index.js
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/icons/: icon.icns
desktop/wails/: go.mod  main.go  wails.json
docs/: Api.md  Build.md  CHANGELOG.md  Config.md  Get-Started.md  README.md
engine/: html.ts  index.ts  input.ts  keys.ts  logger.ts  renderer.ts  texture.ts
engine/sound/: audioplayer.ts
engine/types/: circle.ts  index.ts  rectangle.ts  triangle.ts  vector2d.ts  vector3d.ts  version.ts
engine/utils/: index.ts  markdown.ts  utils.ts
game/: main.ts  main2.ts
samengine-build/: README.md  package-lock.json  package.json
samengine-build/src/: buildconfig.ts  exporthtml.ts  index.ts
samengine-build/src/cli/: cli.ts  config.ts
samengine-cli/: README.md  package.json
samengine-cli/src/: buildinfos.ts
scripts/: copyreadme.js
src/: index.ts  save.ts
src/physics/: collision.ts  index.ts  physicsEngine.ts
src/types/: button.ts  index.ts
src/utils/: index.ts  markdown.ts
src/utils/csv/: csv.test.ts
test/enginetest/: package-lock.json  package.json  webgameengine.config.ts
test/enginetest/game/: main.ts
test/new/: package-lock.json  package.json  samengine.config.ts
test/new/game/: main.ts
test/nvovel/: package-lock.json  package.json  samengine.config.ts
test/nvovel/game/: main.ts
test/pong/: package-lock.json
test/snake/: package-lock.json  package.json  webgameengine.config.ts
test/snake/game/: main.ts
tool/: Cargo.toml  README.md
tool/npm/@shadowdara/samtool/: README.md
tool/npm/@shadowdara/samtool-darwin-arm64/: package.json
tool/npm/@shadowdara/samtool-darwin-x64/: package.json
tool/npm/@shadowdara/samtool-linux-arm64/: package.json
tool/npm/@shadowdara/samtool-linux-arm64-musl/: package.json
tool/npm/@shadowdara/samtool-linux-x64/: package.json
tool/npm/@shadowdara/samtool-linux-x64-musl/: package.json
tool/npm/@shadowdara/samtool-win32-x64/: package.json
tool/npm/@shadowdara/samtooldarwin-arm64/: package.json
tool/npm/@shadowdara/samtooldarwin-x64/: package.json
tool/npm/@shadowdara/samtoollinux-arm64/: package.json
tool/npm/@shadowdara/samtoollinux-arm64-musl/: package.json
tool/npm/@shadowdara/samtoollinux-x64/: package.json
tool/npm/@shadowdara/samtoollinux-x64-musl/: package.json
tool/npm/@shadowdara/samtoolwin32-x64/: package.json
tool/npm/samtool/: package.json
tool/src/: linksaver.rs  main.rs
tools/: build.ts  buildhelper.ts
web/: README.md  next.config.ts
web/app/: layout.tsx  page.tsx
web/app/changelog/: page.tsx
web/app/docs/: layout.tsx  page.tsx
web/app/u/[slug]/: page.tsx
web/content/: Config.md  README.md
web/data/: blocked-domains.txt
(+1 files in other folders)
